name: ode2
version: 0.0.1
cabal-version: -any
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: Copyright (C) 2010 Mandeep Gill
maintainer: mangil@comlab.ox.ac.uk
build-depends: base -any, containers -any, directory -any,
               hslogger -any, mtl -any, parsec -any, random -any
stability: beta
homepage: http://www.comlab.ox.ac.uk/people/mangil/odec
package-url:
bug-reports: mailto:mangil@comlab.ox.ac.uk
synopsis: ODE/SDE modelling and simulation environment
description: Modelling environment for an external DSL that describes ODEs/SDEs
             Initial Proof of concept focussing on SDEs and parallelism
             Many other ideas to be added later having defined syntax
category: Languages
author: Mandeep Gill
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: ode2
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules: ModelSemantics AST UInterpret Compile Interpreter
               Simulate ExecutableAST CodeGen ModelAST Parser Scratch TypedAST
               Utilities
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: