name: ode3
version: 0.0.3
cabal-version: >=1.2
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: Copyright (C) 2010-2012 Mandeep Gill
maintainer: mangil@comlab.ox.ac.uk
stability: alpha
homepage: http://www.comlab.ox.ac.uk/people/mangil/ode
bug-reports: mailto:mangil@comlab.ox.ac.uk
synopsis: Ode3 DSL and simulation environment
description: An external DSL used to describe stochastic-hyrbid models, a front-end to explicitly model ion channel dynamics of cardiac cells is provided.
             A reference interpreter is provided alongside a high-perfromance JIT compilation scheme.
             HPC implementation targets both CPUs and GPUs in parallel, heterogenous, environments.
category: Languages
author: Mandeep Gill
data-dir: ""
 
executable ode3
    build-depends: Shellac -any, Shellac-readline -any, base -any,
                   bimap -any, binary -any, bytestring -any, cond -any,
                   containers -any, data-binary-ieee754 -any, directory -any,
                   fclabels -any, fgl -any, filepath -any, hslogger -any,
                   llvm-base -any, llvm-wrapper -any, mtl -any, parsec -any,
                   pretty-show -any, random -any, shelly -any, split -any, text -any,
                   unix -any
    main-is: Main.hs
    buildable: True
    extensions: MultiParamTypeClasses EmptyDataDecls KindSignatures
                BangPatterns NamedFieldPuns GeneralizedNewtypeDeriving
                RecordWildCards RecordPuns DisambiguateRecordFields
                OverloadedStrings GADTs GADTSyntax DeriveFunctor DeriveTraversable
                DeriveFoldable
    hs-source-dirs: src
    other-modules: Subsystem.Simulation.JITCompiler.JITDiffSolvers
                   Parser.Module Parser.Common Parser.Ode Parser.Ion AST.Module
                   AST.CoreFlat AST.Common AST.Ode AST.Ion AST.Core Utils.OrdSet
                   Utils.Graph Utils.MonadSupply Utils.CommonImports Utils.Utils
                   Utils.ShellHandleBackend Utils.OrdMap Subsystem.ShellUI
                   Subsystem.Units Subsystem.SysState Subsystem.Types
                   Subsystem.ModDriver Subsystem.Units.UnitsDims
                   Subsystem.Units.Builtins Subsystem.Units.Conversion
                   Subsystem.Simulation.Common Subsystem.Simulation.JITCompiler
                   Subsystem.Simulation.Interpreter
                   Subsystem.Simulation.JITCompiler.JITSolver
                   Subsystem.Simulation.JITCompiler.JITCommon
                   Subsystem.Simulation.JITCompiler.JITModel
                   Subsystem.Simulation.JITCompiler.JITShell
                   Subsystem.ModDriver.ModCmd Subsystem.ModDriver.ModDef
                   Process.Desugarer Process.Flatten Process.Renamer Process.Reorderer
                   Process.Validator Process.TypeChecker Process.TypeChecker.Common
                   Process.TypeChecker.Unification Process.TypeChecker.ConstraintGen
                   Process.Flatten.InlineComps Process.Flatten.OptimiseAST
                   Process.Flatten.UnpackTuples Process.Flatten.ConvertAST
                   Process.Flatten.InlineMods Process.Flatten.InitialValueGen
                   Process.Flatten.OptimiseCoreFlatAST Process.Flatten.ConvertTypes
    ghc-options: -w
 