name: ode3
version: 0.1.0
cabal-version: >=1.2
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: Copyright (C) 2010-2012 Mandeep Gill
maintainer: mangil@comlab.ox.ac.uk
stability: alpha
homepage: http://www.comlab.ox.ac.uk/people/mangil/ode
bug-reports: mailto:mangil@comlab.ox.ac.uk
synopsis: Ode3 DSL and simulation environment
description: An external DSL used to describe stochastic-hyrbid models, a front-end to explicitly model ion channel dynamics of cardiac cells is provided.
             A reference interpreter is provided alongside a high-perfromance JIT compilation scheme.
             HPC implementation targets both CPUs and GPUs in parallel, heterogenous, environments.
category: Languages
author: Mandeep Gill
data-dir: ""
 
executable ion
    build-depends: Shellac -any, Shellac-readline -any, array -any,
                   base -any, bimap -any, binary -any, bytestring -any, cmdargs -any,
                   cond -any, containers -any, data-binary-ieee754 -any,
                   directory -any, fclabels -any, fgl -any, filepath -any,
                   hslogger -any, llvm-base -any, llvm-wrapper -any, mtl -any,
                   parsec -any, pretty-show -any, random -any, shelly -any,
                   split -any, text -any, unix -any
    main-is: Ion.hs
    buildable: True
    extensions: MultiParamTypeClasses EmptyDataDecls KindSignatures
                BangPatterns NamedFieldPuns GeneralizedNewtypeDeriving
                RecordWildCards RecordPuns DisambiguateRecordFields
                OverloadedStrings GADTs GADTSyntax DeriveFunctor DeriveTraversable
                DeriveFoldable
    hs-source-dirs: src
    other-modules: Subsystem.SysState Subsystem.ModDriver
                   Subsystem.Units Subsystem.ShellUI Subsystem.Types
                   Subsystem.Units.Builtins Subsystem.Units.Conversion
                   Subsystem.Units.UnitsDims Subsystem.ModDriver.ModDef
                   Subsystem.ModDriver.ModCmd Subsystem.Simulation.Common
                   Subsystem.Simulation.Interpreter Process.TypeChecker
                   Process.Renamer Process.Validator Process.Flatten Process.Reorderer
                   Process.Desugarer Process.TypeChecker.ConstraintGen
                   Process.TypeChecker.Unification Process.TypeChecker.Common
                   Process.Flatten.InlineMods Process.Flatten.ConvertTypes
                   Process.Flatten.ConvertAST Process.Flatten.OptimiseCoreFlatAST
                   Process.Flatten.OptimiseAST Process.Flatten.InitialValueGen
                   Process.Flatten.InlineComps Process.Flatten.UnpackTuples AST.Ode
                   AST.Module AST.Core AST.CoreFlat AST.Common Parser.Ode
                   Parser.Module Parser.Common Ion.Process Ion.Parser Ion.AST
                   Utils.OrdSet Utils.MonadSupply Utils.Utils Utils.CommonImports
                   Utils.ShellHandleBackend Utils.OrdMap Utils.Graph
    ghc-options: -w
 
executable ode3
    build-depends: Shellac -any, Shellac-readline -any, array -any,
                   base -any, bimap -any, binary -any, bytestring -any, cmdargs -any,
                   cond -any, containers -any, data-binary-ieee754 -any,
                   directory -any, fclabels -any, fgl -any, filepath -any,
                   hslogger -any, llvm-base -any, llvm-wrapper -any, mtl -any,
                   parsec -any, pretty-show -any, random -any, shelly -any,
                   split -any, text -any, unix -any
    main-is: Main.hs
    buildable: True
    extensions: MultiParamTypeClasses EmptyDataDecls KindSignatures
                BangPatterns NamedFieldPuns GeneralizedNewtypeDeriving
                RecordWildCards RecordPuns DisambiguateRecordFields
                OverloadedStrings GADTs GADTSyntax DeriveFunctor DeriveTraversable
                DeriveFoldable
    hs-source-dirs: src
    other-modules: Subsystem.SysState Subsystem.ModDriver
                   Subsystem.Units Subsystem.ShellUI Subsystem.Types
                   Subsystem.Units.Builtins Subsystem.Units.Conversion
                   Subsystem.Units.UnitsDims Subsystem.ModDriver.ModDef
                   Subsystem.ModDriver.ModCmd Subsystem.Simulation.JITCompiler
                   Subsystem.Simulation.Common Subsystem.Simulation.Interpreter
                   Subsystem.Simulation.JITCompiler.JITCommon
                   Subsystem.Simulation.JITCompiler.JITDiffSolvers
                   Subsystem.Simulation.JITCompiler.JITSolver
                   Subsystem.Simulation.JITCompiler.JITModel
                   Subsystem.Simulation.JITCompiler.JITShell Process.TypeChecker
                   Process.Renamer Process.Validator Process.Flatten Process.Reorderer
                   Process.Desugarer Process.TypeChecker.ConstraintGen
                   Process.TypeChecker.Unification Process.TypeChecker.Common
                   Process.Flatten.InlineMods Process.Flatten.ConvertTypes
                   Process.Flatten.ConvertAST Process.Flatten.OptimiseCoreFlatAST
                   Process.Flatten.OptimiseAST Process.Flatten.InitialValueGen
                   Process.Flatten.InlineComps Process.Flatten.UnpackTuples AST.Ode
                   AST.Module AST.Core AST.CoreFlat AST.Common Parser.Ode
                   Parser.Module Parser.Common Ion.Process Ion.Parser Ion.AST
                   Utils.OrdSet Utils.MonadSupply Utils.Utils Utils.CommonImports
                   Utils.ShellHandleBackend Utils.OrdMap Utils.Graph
    ghc-options: -w
 