name: ode3
version: 0.1.0
cabal-version: >=1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (C) 2010-2012 Mandeep Gill
maintainer: mangil@comlab.ox.ac.uk
stability: alpha
homepage: http://www.comlab.ox.ac.uk/people/mangil/ode
bug-reports: mailto:mangil@comlab.ox.ac.uk
synopsis: Ode3 DSL and simulation environment
description: An external DSL used to describe stochastic-hyrbid models, a front-end to explicitly model ion channel dynamics of cardiac cells is provided.
             A reference interpreter is provided alongside a high-perfromance JIT compilation scheme.
             HPC implementation targets both CPUs and GPUs in parallel, heterogenous, environments.
category: Languages
author: Mandeep Gill
data-dir: ""
 
executable ode3
    build-depends: Shellac -any, Shellac-readline -any, array -any,
                   base -any, bimap -any, binary -any, bytestring -any, cmdargs -any,
                   cond -any, containers -any, data-binary-ieee754 -any,
                   directory -any, fclabels -any, fgl -any, filepath -any,
                   hslogger -any, llvm-base -any, llvm-wrapper -any, mtl -any,
                   parsec -any, pretty-show -any, random -any, shelly -any,
                   split -any, text -any, unix -any, wl-pprint -any
    main-is: Main.hs
    buildable: True
    extensions: MultiParamTypeClasses FlexibleInstances EmptyDataDecls
                KindSignatures BangPatterns NamedFieldPuns PatternGuards
                GeneralizedNewtypeDeriving RecordWildCards RecordPuns
                DisambiguateRecordFields OverloadedStrings GADTs GADTSyntax
                DeriveFunctor DeriveTraversable DeriveFoldable
    hs-source-dirs: src
    other-modules: Ode.Parser.Ode Ode.Parser.Common Ode.Parser.Module
                   Ode.Utils.CommonImports Ode.Utils.Utils Ode.Utils.ShellHandleBackend
                   Ode.Utils.OrdMap Ode.Utils.OrdSet Ode.Utils.MonadSupply Ode.Utils.Graph
                   Ode.Subsystem.ShellUI Ode.Subsystem.Types Ode.Subsystem.ModDriver
                   Ode.Subsystem.Units Ode.Subsystem.SysState Ode.Subsystem.Units.UnitsDims
                   Ode.Subsystem.Units.Conversion Ode.Subsystem.Units.Builtins
                   Ode.Subsystem.ModDriver.ModCmd Ode.Subsystem.ModDriver.ModDef
                   Ode.Subsystem.Simulation.Interpreter Ode.Subsystem.Simulation.JITCompiler
                   Ode.Subsystem.Simulation.Common
                   Ode.Subsystem.Simulation.JITCompiler.JITShell
                   Ode.Subsystem.Simulation.JITCompiler.JITSolver
                   Ode.Subsystem.Simulation.JITCompiler.JITHybridSolver
                   Ode.Subsystem.Simulation.JITCompiler.JITModel
                   Ode.Subsystem.Simulation.JITCompiler.JITDiffSolvers
                   Ode.Subsystem.Simulation.JITCompiler.JITCommon Ode.Process.ExpandUnits
                   Ode.Process.TypeChecker Ode.Process.Desugarer Ode.Process.Validator
                   Ode.Process.Flatten Ode.Process.Renamer Ode.Process.Reorderer
                   Ode.Process.TypeChecker.Unification Ode.Process.TypeChecker.ConstraintGen
                   Ode.Process.TypeChecker.Common Ode.Process.Flatten.OptimiseAST
                   Ode.Process.Flatten.ConvertAST Ode.Process.Flatten.UnpackTuples
                   Ode.Process.Flatten.ConvertTypes Ode.Process.Flatten.InlineComps
                   Ode.Process.Flatten.InlineMods Ode.Process.Flatten.OptimiseCoreFlatAST
                   Ode.Process.Flatten.InitialValueGen Ode.AST.Core Ode.AST.Ode Ode.AST.Common
                   Ode.AST.Module Ode.AST.CoreFlat Ion.CodeGen Ion.AST Ion.Process Ion.Parser
    ghc-options: -w
 
executable ion
    build-depends: Shellac -any, Shellac-readline -any, array -any,
                   base -any, bimap -any, binary -any, bytestring -any, cmdargs -any,
                   cond -any, containers -any, data-binary-ieee754 -any,
                   directory -any, fclabels -any, fgl -any, filepath -any,
                   hslogger -any, llvm-base -any, llvm-wrapper -any, mtl -any,
                   parsec -any, pretty-show -any, random -any, shelly -any,
                   split -any, text -any, unix -any, wl-pprint -any
    main-is: Ion.hs
    buildable: True
    extensions: MultiParamTypeClasses FlexibleInstances EmptyDataDecls
                KindSignatures BangPatterns NamedFieldPuns
                GeneralizedNewtypeDeriving RecordWildCards RecordPuns
                DisambiguateRecordFields OverloadedStrings GADTs GADTSyntax
                DeriveFunctor DeriveTraversable DeriveFoldable
    hs-source-dirs: src
    other-modules: Ode.Parser.Ode Ode.Parser.Common Ode.Parser.Module
                   Ode.Utils.CommonImports Ode.Utils.Utils Ode.Utils.ShellHandleBackend
                   Ode.Utils.OrdMap Ode.Utils.OrdSet Ode.Utils.MonadSupply Ode.Utils.Graph
                   Ode.Subsystem.ShellUI Ode.Subsystem.Types Ode.Subsystem.ModDriver
                   Ode.Subsystem.Units Ode.Subsystem.SysState Ode.Subsystem.Units.UnitsDims
                   Ode.Subsystem.Units.Conversion Ode.Subsystem.Units.Builtins
                   Ode.Subsystem.ModDriver.ModCmd Ode.Subsystem.ModDriver.ModDef
                   Ode.Subsystem.Simulation.Interpreter Ode.Subsystem.Simulation.Common
                   Ode.Subsystem.Simulation.JITCompiler.JITHybridSolver
                   Ode.Process.ExpandUnits Ode.Process.TypeChecker Ode.Process.Desugarer
                   Ode.Process.Validator Ode.Process.Flatten Ode.Process.Renamer Ode.Process.Reorderer
                   Ode.Process.TypeChecker.Unification Ode.Process.TypeChecker.ConstraintGen
                   Ode.Process.TypeChecker.Common Ode.Process.Flatten.OptimiseAST
                   Ode.Process.Flatten.ConvertAST Ode.Process.Flatten.UnpackTuples
                   Ode.Process.Flatten.ConvertTypes Ode.Process.Flatten.InlineComps
                   Ode.Process.Flatten.InlineMods Ode.Process.Flatten.OptimiseCoreFlatAST
                   Ode.Process.Flatten.InitialValueGen Ode.AST.Core Ode.AST.Ode Ode.AST.Common
                   Ode.AST.Module Ode.AST.CoreFlat Ion.CodeGen Ion.AST Ion.Process Ion.Parser
    ghc-options: -w
 
